# playground

./: Cargo.toml  README.md  TODO.md
actix/: Cargo.toml  README.md  TODO.md
actix/src/: lib.rs
actix/tests/: tests.rs
src/: lib.rs
tauri/: .gitignore  README.md  TODO.md
tauri/frontend/: .gitignore  codegen.ts  next.config.js  package-lock.json  package.json  tsconfig.json
tauri/frontend/pages/: index.tsx
tauri/frontend/styles/: Home.module.css
tauri/src/: Cargo.toml  index.html  main.js  rustfmt.toml  tauri.conf.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tauri/src/src/: api.rs  dal.rs  gql.rs  lib.rs  main.rs
tests/: tests.rs
