[package]
name = "example_app"
version = "0.0.0"
description = "A Tauri App"
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "^1.0.68"
async-graphql = "^5.0.5"
dotenv = "^0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[[bin]]
name = "tauri-app"
path = "src/main.rs"
